Add generating points

--- a/src/main/webapp/error.xhtml
+++ b/src/main/webapp/error.xhtml
@@ -11,11 +11,12 @@
     </head>
     <h:body>
         <ui:composition template="templates/template.xhtml">
+            <h:outputStylesheet name="errorPage.css" library="css" />
             <ui:define name="header">
             </ui:define>
             <ui:define name="content">
                 <div class="div_class">
-                    <img id="imagine" class="background-with-shadow" src="resources/images/pic1.png" alt="Милый хомячок"/>
+                    <img class="imagine background-with-shadow" src="resources/images/pic1.png" alt="Милый хомячок"/>
                 </div>
             </ui:define>
             <ui:define name="button">
