Make js for clock

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,6 +6,10 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<h:head>
+    <h:outputScript library="js" name="jQuery.js"/>
+    <h:outputScript library="js" name="clock.js"/>
+</h:head>
 <f:view>
     <h:body>
         <ui:composition template="templates/template.xhtml">
