--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -8,7 +8,8 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
-
+    <h:outputScript library="js" name="valid.js"/>
+    <h:outputScript library="js" name="jQuery.js"/>
 </h:head>
 <f:view>
     <h:body>
